--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "bootstrap": "^5.2.3",
     "dotenv": "^16.4.5",
     "firebase": "^10.10.0",
+    "ical.js": "^2.1.0",
     "node-sass": "^9.0.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.1",
+    "react-calendar": "^5.1.0",
     "react-datepicker": "^4.11.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
