--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "tu-mundo-interior-website",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": "18.x"
+  },
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -10,7 +13,6 @@
     "dotenv": "^16.4.5",
     "firebase": "^10.10.0",
     "ical.js": "^2.1.0",
-    "node-sass": "^9.0.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.1",
     "react-calendar": "^5.1.0",
@@ -19,6 +21,7 @@
     "react-icons": "^4.7.1",
     "react-router-dom": "^6.8.1",
     "react-scripts": "5.0.1",
+    "sass": "^1.93.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
