--- a/package.json
+++ b/package.json
@@ -2,9 +2,6 @@
   "name": "tu-mundo-interior-website",
   "version": "0.1.0",
   "private": true,
-  "engines": {
-    "node": "18.x"
-  },
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -29,7 +26,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "build-css": "node-sass --include-path scss scss/styles.scss src/App.css",
+    "build-css": "sass scss/styles.scss src/App.css",
     "watch-css": "nodemon -e scss -x \"npm run build-css\""
   },
   "eslintConfig": {
